@@ -1,3 +1,5 @@
+* Optimize Event.pointerX() and Event.pointerY() to calculate one coordinate instead of both. [#403 state:resolved] [jddalton, Nick Stakenburg]
+
 * Optimize Element#getWidth and Element#getHeight to calculate one dimension instead of both. [jddalton]
 
 * Add helper methods Element.(_getCssDimensions|_getCssWidth|_getCssWidth) to reduce repeated code. [jddalton]
